# lab06hw

./: .gitignore  CMakeLists.txt
.github/workflow/: cmake.yml
.github/workflows/: cmake.yml  release.yml
solver_application/: CMakeLists.txt
